Updated CSS, JS, HTML
- Changed Wireframe
- Added test Imgs
- Added test img function JS
- Added inline for test imgs

--- a/style.css
+++ b/style.css
@@ -1,42 +1,33 @@
 body {
-    background-color: wheat;
+    background-color: white;
 }
 
 .item1 {grid-area: header;}
 .item2 {grid-area: results;}
 .item3 {grid-area: textbox;}
-.item4 {grid-area: images;}
-.item5 {grid-area: footer;}
 
 .grid-container {
     display: grid;
     grid-template-areas: 
     'header header header header header header header header header header'
-    'results results images images images images images images images images images'
     'results results textbox textbox textbox textbox textbox textbox textbox textbox'
     'results results textbox textbox textbox textbox textbox textbox textbox textbox'
     'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'footer footer footer footer footer footer footer footer footer footer' ; 
-    
+    'results results textbox textbox textbox textbox textbox textbox textbox textbox';
 gap: 10px;
-background-color: aliceblue;
+background-color: white;
 padding: 10px;}
 
 .grid-container > div {
-    background-color: blueviolet;
+    background-color: lightgrey;
     text-align: center;
     padding: 20px;
     font-size: 30px;
+    
 }
 
-/* 'header header header header header header header header header header'
-    'results results images images images images images images images images images'
-    'results results right right right right right right right right'
-    'results results right right right right right right right right'
-    'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'results results textbox textbox textbox textbox textbox textbox textbox textbox'
-    'footer footer footer footer footer footer footer footer footer footer' ; */
 
+.duck1 .duck2 .duck3 {
+    display:inline;
+    inline-size: 50px;
+}
