Made Image Clicker
Added image clicker JS
- Not functional currently
- Fixed website crashing (due to loop)
- Removed while loop (will fix)

--- a/style.css
+++ b/style.css
@@ -30,4 +30,11 @@ padding: 10px;}
 .duck1 .duck2 .duck3 {
     display:inline;
     inline-size: 50px;
+    width: 460px;
+    max-height: 26rem;
+}
+
+img{
+    width: 460px;
+    max-height: 26rem;
 }
