Updated HTML, CSS, and JS
Added myChart

--- a/style.css
+++ b/style.css
@@ -1,69 +1,69 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(207, 224, 218);
-    color: rgb(46, 82, 61);
-    display: block;
-    margin-left: 70px;
-    margin-right: 70px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(207, 224, 218);
+  color: rgb(46, 82, 61);
+  display: block;
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
 main {
-    width: 1000px;
-    margin: 3rem auto;
+  width: 1000px;
+  margin: 3rem auto;
 }
 
 main > div:first-of-type {
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 10px;
 }
 
 #logo {
-    width: 100px;
+  width: 100px;
 }
 
 h1 {
-    line-height: .8;
-    margin: 3rem 0 1rem;
+  line-height: 0.8;
+  margin: 3rem 0 1rem;
 }
 
-section+div {
-    background-color: brown;
-    color: rgb(244, 236, 236);
-    padding: .5rem 1rem;
-    width: max-content;
-    height: max-content;
-    font-size: .8rem;
-    margin: 1rem;
-    border-radius: 0%;
-    row-gap: 1em;
+section + div {
+  background-color: brown;
+  color: rgb(244, 236, 236);
+  padding: 0.5rem 1rem;
+  width: max-content;
+  height: max-content;
+  font-size: 0.8rem;
+  margin: 1rem;
+  border-radius: 0%;
+  row-gap: 1em;
 }
 
 section img {
-    width: 400px;
-    max-height: 20rem;
-    border: 5px solid;
-   margin-right: 10px;
+  width: 400px;
+  max-height: 20rem;
+  border: 5px solid;
+  margin-right: 10px;
 }
 
 section {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-direction: row;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
 }
 
 section img:hover {
-    border: 5px solid lightgray;
-    cursor: pointer
+  border: 5px solid lightgray;
+  cursor: pointer;
 }
 
-section+div:hover {
-    cursor: pointer;
-    border: 2px solid gray;
+section + div:hover {
+  cursor: pointer;
+  border: 2px solid gray;
 }
 
 section {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
