--- a/style.css
+++ b/style.css
@@ -22,13 +22,38 @@ main > div:first-of-type {
   width: 100px;
 }
 
-h1 {
+/* h1 {
   line-height: 0.8;
   margin: 3rem 0 1rem;
+} */
+
+h1{
+  color: #484848;
+  font-size: 50px;
+  font-weight: bold;
+  font-family: monospace;
+  letter-spacing: 7px;
+  cursor: pointer
+}
+h1 span{
+  transition: .5s linear
+}
+h1:hover span:nth-child(1){
+  margin-right: 5px
+}
+}
+h1:hover span:nth-child(2){
+  margin-left: 30px
+}
+h1:hover span{
+  color: #ffffff;
+  text-shadow: 0 0 10px #c4f456,
+               0 0 20px #c4f456, 
+               0 0 40px #c4f456;
 }
 
 section + div {
-  background-color: brown;
+  background-color: rgb(26, 147, 64);
   color: rgb(244, 236, 236);
   padding: 0.5rem 1rem;
   width: max-content;
@@ -71,4 +96,7 @@ section {
 img {
   width: 460px;
   max-height: 26rem;
+  background-color: white;
+  border: #ffffff;
+  border-radius: 50px;
 }
