--- a/style.css
+++ b/style.css
@@ -22,10 +22,7 @@ main > div:first-of-type {
   width: 100px;
 }
 
-/* h1 {
-  line-height: 0.8;
-  margin: 3rem 0 1rem;
-} */
+/* this is the beginning of the h1 glow code */
 
 h1{
   color: #484848;
@@ -41,10 +38,12 @@ h1 span{
 h1:hover span:nth-child(1){
   margin-right: 5px
 }
-}
+
 h1:hover span:nth-child(2){
   margin-left: 30px
 }
+
+/* select the span to glow when hovered using text-shadow */
 h1:hover span{
   color: #ffffff;
   text-shadow: 0 0 10px #c4f456,
@@ -88,15 +87,13 @@ section + div:hover {
   border: 2px solid gray;
 }
 
-section {
-  display: flex;
-  flex-direction: row;
-}
+/* this is the end of the code for the h1 glow */
 
 img {
   width: 460px;
   max-height: 26rem;
   background-color: white;
   border: #ffffff;
+  /* the 50px changes the img size */
   border-radius: 50px;
 }
